CSCMETAX-321: [ADD] new query parameter for dataset single API: preferred_identifier. Using this does not lookup value from urn_identifier field. NOTE: Using pk still works, but it should be disallowed anyway for general audience.
